# Syntactically-Constrained-Sampling

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
_sre/: sre.c  sre_lib.h
notebooks/: Adding_a_New_Constraint.ipynb  Examples_with_Non_IFT_Models.ipynb  Sampling_Constraints_Web_UI_vicuna_13b_GPTQ_4bit_128g.ipynb
regex_parser/: __init__.py  _compiler.py  _constants.py  _parser.py
scs/constraint/: __init__.py  json.py
scs/incremental_parse/: __init__.py  json.py
scs_re/: _casefix.py  _compiler.py  _constants.py
src/scs/: handler.py
src/scs/constraint/: __init__.py  json.py  one_of.py
src/scs/incremental_parse/: __init__.py  json.py  string_match.py
src/scs/incremental_parse/json/: __init__.py  parser.py  schema.py
tests/: test_handler.py  test_json.py  test_json_schema.py  test_string_match.py
