[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sampling-constraints"
version = "0.0.17"
authors = [
  { name = "Isaac Rehg", email = "isaacrehg@gmail.com" },
]
description = "Library of incremental parsers used to force syntax constraints on next-token predictions during language model generation"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/IsaacRe/Syntactically-Constrained-Sampling"
"Bug Tracker" = "https://github.com/IsaacRe/Syntactically-Constrained-Sampling/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]